--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
 	},
 	"peerDependencies": {
 		"react": "^15.3.0 || ^16.0.0 || ^17.0.0 || ^18.0.0",
-		"react-dom": "^15.3.0 || ^16.0.0"
+		"react-dom": "^15.3.0 || ^16.0.0 || ^17.0.0 || ^18.0.0"
 	},
 	"engines": {
 		"node": ">= 8"
